# dedalus_plotting

./: README.md  mypy-3.10.ini  mypy-3.11.ini  mypy-3.12.ini  mypy-3.9.ini  pyproject.toml  setup.py
.github/workflows/: lint.yml  mypy.yml
examples/d2/2d_rayleigh_benard/: README.md  plot_all_slices.py  plot_b_pdf.py  plot_b_slices.py  plot_instantaneous_profiles.py  plot_scalar_traces.py  rayleigh_benard.py
examples/d2/3d_rayleigh_benard/: README.md  plot_box.py  plot_pyvista_box.py  rayleigh_benard.py
examples/d3/ivp_ballShell_internally_heated_convection/: ballShell_internally_heated_convection.py  plot_equatorial_slices.py  plot_meridional_slices.py  plot_pyvista_sphere.py
examples/d3/ivp_ball_internally_heated_convection/: README.md  internally_heated_convection.py  plot_avg_structure.py  plot_equatorial_slices.py  plot_meridional_slices.py  plot_mollweide_slices.py  plot_orthographic_slices.py  plot_pyvista_sphere.py  plot_rolled_structure.py
examples/d3/ivp_box_2d_rayleigh_benard/: README.md  plot_all_slices.py  plot_b_pdf.py  plot_b_slices.py  plot_rolled_profiles.py  rayleigh_benard.py
examples/d3/ivp_shell_convection/: plot_pyvista_sphere.py  shell_convection.py
examples/templates/: README.md  parallel_profile_operation.py  rayleigh_benard.py  uniform_output_task.py
plotpal/: file_reader.py  pdfs.py  plot_grid.py  profiles.py  scalars.py  slices.py  volumes.py
